# ear-production-suite

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
cmake_modules/: juce_helpers.cmake
common_helpers/: common_definition_helper.cpp
ear-production-suite-plugins/lib/include/: scene_gains_calculator.hpp
ear-production-suite-plugins/lib/src/: scene_gains_calculator.cpp
ear-production-suite/lib/: CMakeLists.txt
ear-production-suite/lib/include/: binaural_monitoring_backend.hpp
ear-production-suite/lib/include/helper/: eps_to_ear_metadata_converter.hpp
ear-production-suite/lib/messages/: type_metadata.proto
ear-production-suite/lib/src/: binaural_monitoring_audio_processor.cpp  binaural_monitoring_backend.cpp  scene_gains_calculator.cpp
ear-production-suite/plugins/binaural_monitoring/: CMakeLists.txt
ear-production-suite/plugins/binaural_monitoring/src/: binaural_monitoring_frontend_connector.cpp  binaural_monitoring_frontend_connector.hpp  binaural_monitoring_plugin_editor.cpp  binaural_monitoring_plugin_editor.hpp  binaural_monitoring_plugin_processor.cpp  binaural_monitoring_plugin_processor.hpp  headphone_channel_meter.hpp  headphone_channel_meter_box.hpp  orientation_osc.hpp  value_box_orientation.hpp  value_box_osc.hpp
ear-production-suite/plugins/hoa/: CMakeLists.txt
ear-production-suite/plugins/hoa/src/: channel_gain.hpp  channel_gains_box.hpp  hoa_component.hpp  hoa_frontend_connector.cpp  hoa_frontend_connector.hpp  hoa_plugin_editor.cpp  hoa_plugin_processor.cpp  hoa_plugin_processor.hpp  value_box_channel_gain.hpp  value_box_main.hpp
ear-production-suite/plugins/scene/src/: items_container.hpp  scene_frontend_connector.cpp
reaper-adm-extension/test/reaper_adm/: CMakeLists.txt
submodules/: CMakeLists.txt
